<resources>
    <string name="app_name">WharryNathan_TripJournal</string>
    <string name="action_settings">Settings</string>
    <string name="import_shared_trip">Import Shared Trip</string>
    <string name="new_trip">Create New Trip</string>
    <string name="title_main">Trip Journal</string>
    <string name="empty_trips">No Trips Found</string>
    <string name="add_trip">Add Trip</string>
    <string name="label_addtrip">Add New Trip</string>
    <string name="hint_trip_title">Enter Trip Title</string>
    <string name="hint_trip_desc">Enter Trip Description</string>
    <string name="hint_start_date">Enter First Day of Trip</string>
    <string name="hint_end_date">Enter Last Day of Trip</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Need an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="users_and_data">Users and Data</string>
    <string name="log_out">Log Out</string>
    <string name="current_user_data">Current User Data</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="hometown">Hometown</string>
    <string name="enter_hometown">Enter hometown</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="no_saved_items">No Saved Items</string>
    <string name="wtf">what the fuck</string>
    <string name="add_trip_item">Add Trip Item</string>
    <string name="add_memory">Add Memory</string>
    <string name="logout">Logout</string>
    <string name="enter_memory_details">Enter Memory Details</string>
    <string name="image_of_memory">Image of Memory</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_trip_memory_title">Enter Trip Memory Title</string>
    <string name="share_trip">Share Trip</string>
    <string name="share_trip_message">"Download the Project3w Trip Journal App and enter this code to share in my journey. Trip Code: "</string>
    <string name="enter_trip_code">Enter Trip Code</string>
    <string name="delete_memory">Delete Memory</string>
    <string name="failed_delete_function">Failed to Create Delete Function</string>


</resources>
