<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <EditText
            android:id="@+id/trip_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_date"
            android:focusable="false"/>

        <EditText
            android:id="@+id/trip_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_end_date"
            android:focusable="false"/>

        <EditText
            android:id="@+id/trip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_trip_title"/>

        <EditText
            android:id="@+id/trip_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_trip_desc"/>

    </LinearLayout>

</LinearLayout>