<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/additem_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:contentDescription="@string/image_of_memory"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp">

        <EditText
            android:id="@+id/additem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_trip_memory_title"/>

        <EditText
            android:id="@+id/additem_desc"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/enter_memory_details"
            android:scrollbars="vertical"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>